# forgebase

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_cli.sh  todo.md
AK/: CMakeLists.txt  File.cpp  File.h  IO.cpp  IO.h  Ini.cpp  Ini.h  Logging.cpp  Logging.h  Strings.cpp  Strings.h  Terminal.cpp  Terminal.h  UserSpace.cpp  UserSpace.h
Forgebase/: CMakeLists.txt  Forgebase.cpp  Forgebase.h
Infrastructure/: docker-compose.yaml
Libraries/: CMakeLists.txt
Libraries/LibIndexing/: CMakeLists.txt  FileIndexer.cpp  FileIndexer.h
Libraries/LibObsidian/: CMakeLists.txt  Obsidian.cpp  Obsidian.h
Libraries/LibRepository/: CMakeLists.txt  CodeRepository.cpp  CodeRepository.h
Libraries/LibStorage/: CMakeLists.txt  FileIndexStore.cpp  FileIndexStore.h  IndexFile.cpp  IndexFile.h  PostgresqlFileIndexStore.cpp  PostgresqlFileIndexStore.h  SQLiteFileIndexStore.cpp  SQLiteFileIndexStore.h
Resources/DB/: file_table.sql
Userland/: CMakeLists.txt
Userland/CLI/: CMakeLists.txt  main.cpp
Userland/TUI/: CMakeLists.txt  main.cpp
